istio_essentials/demo/security/peerauthentication-mesh.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: nginx-mtls-permissive
  namespace: istio
spec:
  selector:
    matchLabels:
      run: nginx
  mtls:
    mode: PERMISSIVE
