istio_essentials/demo/security/serviceentry-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: se-google
spec:
  hosts:
  - google.com
  - www.google.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
